libwebrtc.dylib relies on dead code stripping (fails to link if dead code is not stripped in Debug builds) https://bugs.webkit.org/show_bug.cgi?id=218453

Reviewed by Eric Carlson.

Update build config and code to allow building without code stripping.

* Configurations/Base.xcconfig:
* Source/third_party/libvpx/source/libvpx/vp9/encoder/vp9_temporal_filter.c:
Compile out some functions that are not-realtime only.
* libwebrtc.xcodeproj/project.pbxproj:


Canonical link: https://commits.webkit.org/232007@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270305 268f45cc-cd09-0410-ab3c-d52691b4dbfc